--- a/src/styles/components/_visibility.scss
+++ b/src/styles/components/_visibility.scss
@@ -6,7 +6,7 @@
   
   .show-for-desktop {
     @media (max-width: $desktop-breakpoint - .01rem) {
-      display: none;
+      //display: none;
     }
   }
   
