--- a/src/styles/components/_page-header.scss
+++ b/src/styles/components/_page-header.scss
@@ -9,9 +9,18 @@
 }
 
 .page-header__title {
+    font-size: 2.5rem;
     font-weight: 300;
     margin: 0; 
     span {
         font-weight: 700;
     }   
+    @media (min-width: $desktop-breakpoint) {
+        font-size: $l-size;
+        font-weight: 300;
+        margin: 0; 
+        span {
+            font-weight: 700;
+        }  
+    }
 }
