--- a/src/styles/components/_input-group.scss
+++ b/src/styles/components/_input-group.scss
@@ -1,19 +1,19 @@
 .input-group {
     display: flex;
-    flex-direction: row;
-    justify-content: space-around;
+    flex-direction: column;
     margin-bottom: $m-size;
 
-    @media(min-width: $desktop-breakpoint) {
-        flex-direction: row;
-        margin-bottom: $l-size;
+    @media (min-width: $desktop-breakpoint) {
+      flex-direction: row;
+      margin-bottom: $l-size;
     }
-}
-
-.input-group__item {
-    margin: 0 0.5rem 0 0;
+  }
+  
+  .input-group__item {
+    margin-bottom: $s-size;
     
-    @media(min-width: $desktop-breakpoint) {
-        margin: 0 $s-size 0 0;
+    @media (min-width: $desktop-breakpoint) {
+      margin: 0 $s-size 0 0;
     }
-}
+  }
+  
