--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -8,6 +8,11 @@
     line-height: 1;
     padding: $s-size;
     text-decoration: none;
+    width: 100%;
+
+    @media (min-width: $desktop-breakpoint) {
+        width: auto;
+    }
 }
 
 .button--link {
